--- a/snapshot/guide/pages/springToMicronautStart.html
+++ b/snapshot/guide/pages/springToMicronautStart.html
@@ -116,7 +116,7 @@ dependencies {
 <i class="fa icon-note" title="Note"></i>
 </td>
 <td class="content">
-If you are only going to references Spring annotations and not Spring classes or interfaces then <code>org.springframework.boot:spring-boot-starter</code> can be <code>compileOnly</code>
+If you are only going to reference Spring annotations and not Spring classes or interfaces then <code>org.springframework.boot:spring-boot-starter</code> can be <code>compileOnly</code>
 </td>
 </tr>
 </table>
