Updating docs for Travis build: https://travis-ci.org/micronaut-projects/micronaut-spring/builds/454520856

--- a/snapshot/guide/index.html
+++ b/snapshot/guide/index.html
@@ -150,7 +150,7 @@
 <p>Micronaut for Spring allows you to use traditional Spring annotations which are mapped to Micronaut annotations at compilation time. This allows you to write an application that can be imported to another Spring or Micronaut application without change.</p>
 </div>
 <div class="paragraph">
-<p>Unlikely traditional runtime reflection based frameworks Micronaut uses Ahead of Time (AOT) compilation, hence there is no runtime overhead to supporting an additional set of annotations (in this case Spring&#8217;s annotation programming model).</p>
+<p>Unlike traditional runtime reflection based frameworks Micronaut uses Ahead of Time (AOT) compilation, hence there is no runtime overhead to supporting an additional set of annotations (in this case Spring&#8217;s annotation programming model).</p>
 </div>
 <div class="paragraph">
 <p>As part of this project an <a href="https://github.com/micronaut-projects/micronaut-spring/tree/master/examples/greeting-service">Example Application</a> is provided that includes no dependencies on Micronaut itself in the source code (only Spring dependencies) but is computed into a Micronaut application at compilation time.</p>
