Updating docs for Travis build: https://travis-ci.org/micronaut-projects/micronaut-spring/builds/476722796

--- a/snapshot/guide/pages/springToMicronautStart.html
+++ b/snapshot/guide/pages/springToMicronautStart.html
@@ -102,7 +102,7 @@ dependencies {
     annotationProcessor "io.micronaut:micronaut-validation::1.0.2"
     annotationProcessor "io.micronaut.spring:micronaut-spring-annotation:1.0.0.BUILD-SNAPSHOT"
 
-    compile "io.micronaut:micronaut-inject::1.0.2"
+    compile "io.micronaut:micronaut-inject:1.0.2"
     compile("org.springframework.boot:spring-boot-starter")
     ...
 
