Updating docs for Travis build: https://travis-ci.org/micronaut-projects/micronaut-spring/builds/476889563

--- a/snapshot/guide/introduction.html
+++ b/snapshot/guide/introduction.html
@@ -105,6 +105,25 @@ function addJsClass() {
 <div class="paragraph">
 <p>To achieve this the project provides the ability to use a subset of the Spring Annotation-Based programming model to build Micronaut applications. The goal is not necessarily to provide an alternative runtime for Spring, but instead to enable the ability to build libraries that work with both Spring and Micronaut.</p>
 </div>
+<div class="sect2">
+<h3 id="_release_notes">Release Notes</h3>
+<div class="sect3">
+<h4 id="_1_0_0_m2">1.0.0.M2</h4>
+<div class="ulist">
+<ul>
+<li>
+<p>Examples for Maven and Kotlin to <code>examples</code> directory</p>
+</li>
+<li>
+<p><code>@Profile("test")</code> now mapped to <code>@Requires(env="test")</code></p>
+</li>
+<li>
+<p>Better support for <code>registerSingleton</code></p>
+</li>
+</ul>
+</div>
+</div>
+</div>
 
 
                 <div style="clear:both;margin-top:15px;"></div>
