--- a/snapshot/guide/pages/springToMicronautStart.html
+++ b/snapshot/guide/pages/springToMicronautStart.html
@@ -94,18 +94,29 @@ function addJsClass() {
     id "java"
     id "org.springframework.boot" version "2.1.0.RELEASE"
     id "io.spring.dependency-management" version "1.0.6.RELEASE"
-    id "net.ltgt.apt" version "0.19"
+    id "net.ltgt.apt" version "0.19"                    // for Java and Groovy applications
+    id "org.jetbrains.kotlin:kapt" version "1.2.61"     // for Kotlin applications
 }
 
 dependencies {
+    // for Java applications
     annotationProcessor "io.micronaut:micronaut-inject-java:1.0.3"
-    annotationProcessor "io.micronaut:micronaut-validation::1.0.3"
+    annotationProcessor "io.micronaut:micronaut-validation:1.0.3"
     annotationProcessor "io.micronaut.spring:micronaut-spring-annotation:1.0.0.BUILD-SNAPSHOT"
+
+    // for Kotlin applications
+    kapt "io.micronaut:micronaut-inject-java:1.0.3"
+    kapt "io.micronaut:micronaut-validation:1.0.3"
+    kapt "io.micronaut.spring:micronaut-spring-annotation:1.0.0.BUILD-SNAPSHOT"
+
+    // for Groovy applications
+    compileOnly "io.micronaut:micronaut-inject-groovy:$micronautVersion"
+    compileOnly "io.micronaut:micronaut-validation:$micronautVersion"
+    compileOnly "io.micronaut.spring:micronaut-spring-annotation:$micronautSpringVersion"
 
     compile "io.micronaut:micronaut-inject:1.0.3"
     compile("org.springframework.boot:spring-boot-starter")
     ...
-
 }</code></pre>
 </div>
 </div>
