Updating docs for Travis build: https://travis-ci.org/micronaut-projects/micronaut-spring/builds/505721682

--- a/snapshot/guide/pages/springBoot.html
+++ b/snapshot/guide/pages/springBoot.html
@@ -91,7 +91,7 @@ function addJsClass() {
 <div class="listingblock">
 <div class="title">Including <code>spring-boot</code> processing</div>
 <div class="content">
-<pre class="highlightjs highlight"><code class="language-groovy" data-lang="groovy">dependencies {
+<pre class="highlightjs highlight"><code class="language-groovy hljs" data-lang="groovy">dependencies {
 
     ...
     // additional Spring Boot dependencies
