--- a/snapshot/guide/pages/springMvc.html
+++ b/snapshot/guide/pages/springMvc.html
@@ -94,7 +94,7 @@ function addJsClass() {
 <div class="listingblock">
 <div class="title">Including <code>spring-web</code> processing</div>
 <div class="content">
-<pre class="highlightjs highlight"><code class="language-groovy" data-lang="groovy">dependencies {
+<pre class="highlightjs highlight"><code class="language-groovy hljs" data-lang="groovy">dependencies {
 
     ...
     // additional Spring web dependencies
