--- a/snapshot/guide/pages/micronautClient.html
+++ b/snapshot/guide/pages/micronautClient.html
@@ -94,7 +94,22 @@ function addJsClass() {
 <div class="listingblock">
 <div class="title">Spring <code>@Client</code> Implementation</div>
 <div class="content">
-<pre class="highlightjs highlight"><code class="language-java" data-lang="java">package io.micronaut.spring.web.annotation;
+<pre class="highlightjs highlight"><code class="language-java hljs" data-lang="java">/*
+ * Copyright 2017-2019 original authors
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ * http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+package io.micronaut.spring.web.annotation;
 
 import io.micronaut.http.HttpResponse;
 import io.micronaut.http.annotation.Header;
