--- a/snapshot/guide/springParentContext.html
+++ b/snapshot/guide/springParentContext.html
@@ -101,7 +101,7 @@ function addJsClass() {
 <div class="listingblock">
 <div class="title">Using the Micronaut Parent Context</div>
 <div class="content">
-<pre class="highlightjs highlight"><code class="language-java" data-lang="java">SpringApplicationBuilder builder = new SpringApplicationBuilder();
+<pre class="highlightjs highlight"><code class="language-java hljs" data-lang="java">SpringApplicationBuilder builder = new SpringApplicationBuilder();
 MicronautApplicationContext context = new MicronautApplicationContext();
 context.start();
 builder.parent(context);
