--- a/snapshot/guide/springToMicronaut.html
+++ b/snapshot/guide/springToMicronaut.html
@@ -170,7 +170,7 @@ If an annotation or interface of Spring is not mentioned in this documentation c
 </div>
 <div class="listingblock">
 <div class="content">
-<pre class="highlightjs highlight"><code class="language-groovy" data-lang="groovy">plugins {
+<pre class="highlightjs highlight"><code class="language-groovy hljs" data-lang="groovy">plugins {
     id "java"
     id "org.springframework.boot" version "2.1.0.RELEASE"
     id "io.spring.dependency-management" version "1.0.6.RELEASE"
@@ -468,7 +468,7 @@ If you are only going to reference Spring annotations and not Spring classes or 
 <div class="listingblock">
 <div class="title">Including <code>spring-web</code> processing</div>
 <div class="content">
-<pre class="highlightjs highlight"><code class="language-groovy" data-lang="groovy">dependencies {
+<pre class="highlightjs highlight"><code class="language-groovy hljs" data-lang="groovy">dependencies {
 
     ...
     // additional Spring web dependencies
@@ -677,7 +677,7 @@ See the <a href="https://github.com/micronaut-projects/micronaut-spring/tree/mas
 <div class="listingblock">
 <div class="title">Including <code>spring-boot</code> processing</div>
 <div class="content">
-<pre class="highlightjs highlight"><code class="language-groovy" data-lang="groovy">dependencies {
+<pre class="highlightjs highlight"><code class="language-groovy hljs" data-lang="groovy">dependencies {
 
     ...
     // additional Spring Boot dependencies
@@ -855,7 +855,22 @@ See the <a href="https://github.com/micronaut-projects/micronaut-spring/tree/mas
 <div class="listingblock">
 <div class="title">Spring <code>@Client</code> Implementation</div>
 <div class="content">
-<pre class="highlightjs highlight"><code class="language-java" data-lang="java">package io.micronaut.spring.web.annotation;
+<pre class="highlightjs highlight"><code class="language-java hljs" data-lang="java">/*
+ * Copyright 2017-2019 original authors
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ * http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+package io.micronaut.spring.web.annotation;
 
 import io.micronaut.http.HttpResponse;
 import io.micronaut.http.annotation.Header;
