Updating docs for Travis build: https://travis-ci.org/micronaut-projects/micronaut-spring/builds/505763117

--- a/snapshot/guide/introduction.html
+++ b/snapshot/guide/introduction.html
@@ -108,6 +108,19 @@ function addJsClass() {
 <div class="sect2">
 <h3 id="_release_notes">Release Notes</h3>
 <div class="sect3">
+<h4 id="_1_0_0_rc1">1.0.0.RC1</h4>
+<div class="ulist">
+<ul>
+<li>
+<p>Bug fixes</p>
+</li>
+<li>
+<p>Support for <code>ApplicationRunner</code> interface in Spring Boot</p>
+</li>
+</ul>
+</div>
+</div>
+<div class="sect3">
 <h4 id="_1_0_0_m2">1.0.0.M2</h4>
 <div class="ulist">
 <ul>
